--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		 <h1 class="main-title">Sameman</h1>
 		 <font size="5px">
 		 <a class="button-vk" href = "https://vk.com/samemantlt">VK</a>
-		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/">INSTAGRAM</a>
-		 <a class="button-games" href="">GAMES</a>
+		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/">Instagram</a>
+		 <a class="button-games" href="https://github.com/Samemantlt/site">GitHub</a>
 		 </font>
 		 </div>
       </div>
