--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		 <div class="main-text" align="center">
 		 <h1 class="main-title">Sameman</h1>
 		 <font size="5px">
-		 <a class="button-vk" href = "https://vk.com/samemantlt">VK</a>
-		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/">INSTAGRAM</a>
-		 <a class="button-games" href="https://github.com/Samemantlt/site">GITHUB</a>
+		 <a class="button-vk" href = "https://vk.com/samemantlt" target="_blank">VK</a>
+		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/" target="_blank">INSTAGRAM</a>
+		 <a class="button-games" href="https://github.com/Samemantlt/site" target="_blank">GITHUB</a>
 		 </font>
 		 </div>
       </div>
