--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <meta charset="UTF-8">
-  <title>Animated Background Header</title>
+  <title>Sameman</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 </head>
