--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div id="large-header" class="large-header">
          <canvas id="demo-canvas"></canvas>
 		 <div class="main-text" align="center">
-		 <h1 class="main-title">Sameman</h1>
+		 <h1 class="main-title"><a href = "https://samemantlt.github.io/site/" target="_blank">Sameman</a></h1>
 		 <font size="5px">
 		 <a class="button-vk" href = "https://vk.com/samemantlt" target="_blank">VK</a>
 		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/" target="_blank">INSTAGRAM</a>
-		 <a class="button-games" href="https://github.com/Samemantlt/site" target="_blank">GITHUB</a>
+		 <a class="button-games" href="https://github.com/Samemantlt/games" target="_blank">GITHUB</a>
 		 </font>
 		 </div>
       </div>
