--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- partial -->
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js'></script>
+<script src='demo.js'></script>
 <script  src="./script.js"></script>
 
 </body>
