--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache">
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <meta charset="UTF-8">
   <title>Sameman</title>
