--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		 <font size="5px">
 		 <a class="button-vk" href = "https://vk.com/samemantlt" target="_blank">VK</a>
 		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/" target="_blank">INSTAGRAM</a>
-		 <a class="button-games" href="https://github.com/Samemantlt/games" target="_blank">GITHUB</a>
+		 <a class="button-games" href="https://github.com/Samemantlt/" target="_blank">GITHUB</a>
 		 </font>
 		 </div>
       </div>
