--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       <div id="large-header" class="large-header">
          <canvas id="demo-canvas"></canvas>
 		 <div class="main-text" align="center">
-		 <h1 class="main-title"><a href = "https://samemantlt.github.io/site/">Sameman</a></h1>
+		 <h1 class="main-title"><a href = "https://samemantlt.github.io/site/">Sameman</a>
+		 </h1>
 		 <font size="5px">
 		 <a class="button-vk" href = "https://vk.com/samemantlt" target="_blank">VK</a>
 		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/" target="_blank">INSTAGRAM</a>
-		 <a class="button-games" href="https://github.com/Samemantlt/" target="_blank">GITHUB</a>
+		 <a class="button-games" href="https://www.youtube.com/channel/UCe8zo-UrC03P4b62QZq-tUw" target="_blank">YOUTUBE</a>
 		 </font>
 		 </div>
       </div>
@@ -30,6 +31,5 @@
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js'></script>
 <script src='demo.js'></script>
 <script  src="./script.js"></script>
-
 </body>
 </html>
