--- a/it/index.html
+++ b/it/index.html
@@ -1,12 +1,20 @@
+<html>
+    <head>
+        <title>Здесь есть ответы</title>
+    </head>
+    <body>
+        <a href=https://pastebin.com/E4uzpxBq target="_blank">Ответы</a>
+    </body>
+</html>
 <!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta http-equiv="Cache-Control" content="no-cache">
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="shortcut icon" href="../favicon.png" type="image/png">
   <meta charset="UTF-8">
   <title>Sameman</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -18,13 +26,7 @@
 		 <h1 class="main-title"><a href = "https://samemantlt.github.io/site/">Sameman</a>
 		 </h1>
 		 <font size="5px">
-		 <a class="button-vk" href = "https://vk.com/samemantlt" target="_blank">VK</a>
-		 <a class="button-instagram" href="https://www.instagram.com/samemantlt/" target="_blank">INSTAGRAM</a>
-       <a class="button-games" href="https://www.youtube.com/channel/UCe8zo-UrC03P4b62QZq-tUw" target="_blank">YOUTUBE</a>
-       <br>
-       <br>
-	   <!--UIHJFgdaskgf -->
-       <a class="button-otvet" href="https://pastebin.com/E4uzpxBq" target="_blank">Информатика</a>
+         <a class="button-instagram" href=https://pastebin.com/E4uzpxBq target="_blank">Ответы на инфу</a>
 		 </font>
 		 </div>
       </div>
@@ -33,7 +35,7 @@
 <!-- partial -->
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js'></script>
-<script src='demo.js'></script>
-<script  src="./script.js"></script>
+<script src='../demo.js'></script>
+<script  src="../script.js"></script>
 </body>
 </html>
