--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        <br>
        <br>
 	   <!--UIHJFgdaskgf -->
-       <a class="button-otvet" href="https://pastebin.com/E4uzpxBq" target="_blank">Информатика</a>
+       <!--<a class="button-otvet" href="https://pastebin.com/E4uzpxBq" target="_blank">Информатика</a>-->
 		 </font>
 		 </div>
       </div>
