--- a/answers/geographiya-21-05/1/index.html
+++ b/answers/geographiya-21-05/1/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0182)https://docs.google.com/forms/d/e/1FAIpQLScF3JQmfGx0wveFOsKv4Td0ehzqBe1JfU_bZVbS3cqfIOH2JQ/viewscore?viewscore=AE0zAgB8uPckjvTZkUKka9UZNIH94NFGq5nkntpwrLNO33bBfJwy5Hb4EOyFYghYgN_DwY0 -->
-<html lang="ru" class="m2 idcacG ide315"><script>
+<html lang="ru" class="m2 idcacG ide315">
+<link href="index_files/1.css" rel="stylesheet" type="text/css">
+<link href="index_files/2.css" rel="stylesheet" type="text/css">
+<script>
 Object.defineProperty(window, 'ysmm', {
 	set: function(val) {
 		var T3 = val,
